# Desafio1

CrearMatrices/: CMakeLists.txt  main.cpp
Crear_Matrices/build-CrearMatrices-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  build.ninja
Crear_Matrices/build-CrearMatrices-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-2d89c3b6ba786c98d186.json  directory-.-Debug-fab1f1dc56528787dad0.json  index-2024-03-27T16-00-09-0576.json  target-CrearMatrices-Debug-665a1ec7646871ff6c2b.json
Crear_Matrices/build-CrearMatrices-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Funciones/: CMakeLists.txt  Funciones.h
build-CrearMatrices-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_log  CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
build-CrearMatrices-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-08890e9d65a2b207ab02.json  codemodel-v2-4440abd7309a46943ab2.json
build-CrearMatrices-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.DCED61B6D4671A21.idx
main/: CMakeLists.txt  main.cpp
